mongo-express/mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongo-express
    labels:
        app: mongo-express
spec:
    replicas: 1
    selector:
        matchLabels:
            app: mongo-express
    template:
        metadata:
            labels:
                app: mongo-express
        spec:
            containers:
            - name: mongo-express
              image: mongo-express
              ports:
              - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
    name: mongodb-express-service
spec:
    selector:
      app: mongo-express # match with metadata.labels of mongodb Deployment.
    # type: LoadBalancer # creates an external service. Accepts external requests by assignin this service an external IP address
    ports:
      - protocol: TCP
        port: 8081
        targetPort: 8081 # match with the containerPort of the Deployment
        name: mongodb-express-port
          # nodePort: 30000 # port where this external IP addres will be open. Should be between 30000 & 32767
